apps/navidrome/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: navidrome
  namespace: navidrome
spec:
  replicas: 1
  selector:
    matchLabels:
      app: navidrome
  template:
    metadata:
      labels:
        app: navidrome
    spec:
      nodeSelector:
        kubernetes.io/hostname: borgling-1
      tolerations:
        - key: node-role.kubernetes.io/control-plane
          operator: Exists
          effect: NoSchedule
      containers:
        - name: navidrome
          image: deluan/navidrome:latest
          ports:
            - containerPort: 4533
          volumeMounts:
            - name: music
              mountPath: /music
              readOnly: true
            - name: data
              mountPath: /data
      volumes:
        - name: music
          hostPath:
            path: /home/music
            type: DirectoryOrCreate
        - name: data
          persistentVolumeClaim:
            claimName: navidrome-data-pvc
